--- a/recipes/static/recipes/css/detail.css
+++ b/recipes/static/recipes/css/detail.css
@@ -1,5 +1,5 @@
 body {
-  background: url("../images/detail-background2.jpg") no-repeat fixed;
+  background: url("https://res.cloudinary.com/hpkdecig2/image/upload/v1704475349/static/recipes/images/detail-background2.3e2d6d18f8b5.jpg") no-repeat fixed;
   background-size: cover;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 20px;
