--- a/recipes/static/recipes/css/search.css
+++ b/recipes/static/recipes/css/search.css
@@ -5,7 +5,7 @@ body {
   min-height: 100vh;
   margin: 0;
   font-family: "Poppins", sans-serif;
-  background: url("../images/detail-background3.jpg") no-repeat fixed;
+  background: url("https://res.cloudinary.com/hpkdecig2/image/upload/v1704475350/static/recipes/images/detail-background3.7c0ba699092f.jpg") no-repeat fixed;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
