--- a/recipes/templates/recipes/main.html
+++ b/recipes/templates/recipes/main.html
@@ -21,7 +21,7 @@
     </div>
 
     <a class="search" href="{%url 'recipes:search' %}">Search</a>
-    <a href ="{%url 'logout' %}" class="logout"> Logout </a>
+    <a href="{%url 'logout' %}" class="logout"> Logout </a>
     <h1>MyRecipes</h1>
     <ul class="recipe-list">
       {% for object in object_list %}
@@ -35,7 +35,25 @@
       </li>
       {% endfor %}
     </ul>
-  </div>
+
+    <!-- Display pagination links -->
+    <div class="pagination">
+      {% if is_paginated %}
+      <span class="step-links">
+        {% if page_obj.has_previous %}
+        <a href="?page=1">&laquo; first</a>
+        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current-page">{{ page_obj.number }}</span>
+
+        {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">next</a>
+        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+      </span>
+      {% endif %}
+    </div>
 </body>
 
 </html>
